tests/ui/rfcs/rfc-2632-const-trait-impl/const-drop-fail.precise.stderr
error[E0493]: destructor of `T` cannot be evaluated at compile-time
  --> $DIR/const-drop-fail.rs:24:36
   |
LL | const fn check<T: ~const Destruct>(_: T) {}
   |                                    ^ the destructor for this type cannot be evaluated in constant functions

error: aborting due to previous error

For more information about this error, try `rustc --explain E0493`.
